# headstarter-accelerator-projects

./: .gitattributes  .gitignore  Procfile  README.md  gen.sh  requirements.txt  setup.sh
.devcontainer/: devcontainer.json
week-1/: .gitignore  bonus.ipynb  main.ipynb  setup.sh
week-10/: LICENSE  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
week-10/backend/: requirements.txt
week-10/backend/app/: backend_pre_start.py  crud.py  initial_data.py  models.py  tests_pre_start.py  utils.py
week-10/backend/app/alembic/: env.py
week-10/backend/app/api/: main.py
week-10/backend/app/api/routes/: market.py  utils.py
week-10/backend/app/core/: config.py
week-10/docs/docs/: index.md
week-10/financial_market_crash_anomaly_detection_and_investment_strategy/: __init__.py  config.py  dataset.py  features.py
week-10/financial_market_crash_anomaly_detection_and_investment_strategy/modeling/: predict.py  train.py
week-10/frontend/: bun.lockb
week-10/frontend/app/routes/: __root.tsx
week-10/frontend/app/routes/api/auth/: $.ts
week-10/frontend/lib/middleware/: auth-guard.ts
week-10/ml/: Makefile  ccds.json  requirements.txt
week-10/ml/docs/: mkdocs.yml
week-10/ml/financial_market_crash_anomaly_detection_and_investment_strategy/: features.py  plots.py
week-10/ml/financial_market_crash_anomaly_detection_and_investment_strategy/modeling/: train.py
week-10/ml/models/: scaler.pkl
week-10/models/: anomaly_detector.h5
week-11/: TODO.md  bun.lockb  package.json
week-13/: .gitignore  bun.lockb  env.d.ts  package.json  wxt.config.ts
(+141 files in other folders)
