[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "financial_market_crash_anomaly_detection_and_investment_strategy"
version = "0.0.1"
description = "Financial Market Crash Anomaly Detection \u0026 Investment Strategy"
authors = [
  { name = "Mike Odnis" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["financial_market_crash_anomaly_detection_and_investment_strategy"]
force_sort_within_sections = true
